@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/2/2016
+  * added localEsMergeNC
+
 * 4/28/2016
   * changed getJob to send json if clients accept it
 
